--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -17,7 +17,7 @@ services:
       - discovery.type=single-node
       {% endif %}
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms{{ elk_elastic_memory }} -Xmx{{ elk_elastic_memory }}"
+      - "ES_JAVA_OPTS=-Xms{{ elk_elastic_memory }} -Xmx{{ elk_elastic_memory }} -Dlog4j2.formatMsgNoLookups=true"
     ulimits:
       memlock:
         soft: -1
@@ -42,6 +42,7 @@ services:
       - "{{ elk_data_dir }}/logstash/patterns:/usr/share/logstash/patterns"
       - "{{ elk_data_dir }}/logstash/index_management:/usr/share/logstash/index_management"
       - "{{ elk_data_dir }}/logstash/logstash.yml:/usr/share/logstash/config/logstash.yml"
+      - "LS_JAVA_OPTS=-Dlog4j2.formatMsgNoLookups=true"
     ports:
       - {{ elk_listen_ip}}:5044:5044
     networks:
