--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -5,6 +5,7 @@ services:
 {% if elk_deploy_elasticsearch %}
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:{{ elk_version }}
+    restart: unless-stopped
     container_name: elasticsearch
     environment:
       - node.name={{ inventory_hostname }}
@@ -35,6 +36,7 @@ services:
 {% if elk_deploy_logstash %}
   logstash:
     image: docker.elastic.co/logstash/logstash:{{ elk_version }}
+    restart: unless-stopped
     container_name: logstash
     volumes:
       - "{{ elk_data_dir }}/logstash/cert:/usr/share/logstash/cert"
@@ -54,6 +56,7 @@ services:
 {% if elk_deploy_kibana %}
   kibana:
     image: docker.elastic.co/kibana/kibana:{{ elk_version }}
+    restart: unless-stopped
     container_name: kibana
     ports:
       - {{ elk_listen_ip}}:5601:5601
@@ -69,6 +72,7 @@ services:
 {% if elk_deploy_cerebro %}
   cerebro:
     image: lmenezes/cerebro
+    restart: unless-stopped
     container_name: cerebro
     ports:
       - {{ elk_listen_ip}}:9000:9000
@@ -78,6 +82,7 @@ services:
 {% if elk_deploy_elastalert %}
   elastalert:
     image: bitsensor/elastalert:3.0.0-beta.1
+    restart: unless-stopped
     container_name: elastalert
     ports:
       - {{ elk_listen_ip}}:2030:3030
