--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -19,6 +19,7 @@ services:
       {% endif %}
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms{{ elk_elastic_memory }} -Xmx{{ elk_elastic_memory }} -Dlog4j2.formatMsgNoLookups=true"
+      - TZ=Europe/Vienna
     ulimits:
       memlock:
         soft: -1
@@ -38,15 +39,19 @@ services:
     image: docker.elastic.co/logstash/logstash:{{ elk_version }}
     restart: unless-stopped
     container_name: logstash
+    environment:
+      - "LS_JAVA_OPTS=-Dlog4j2.formatMsgNoLookups=true"
+      - TZ=Europe/Vienna
     volumes:
       - "{{ elk_data_dir }}/logstash/cert:/usr/share/logstash/cert"
       - "{{ elk_data_dir }}/logstash/pipeline:/usr/share/logstash/pipeline"
       - "{{ elk_data_dir }}/logstash/patterns:/usr/share/logstash/patterns"
       - "{{ elk_data_dir }}/logstash/index_management:/usr/share/logstash/index_management"
       - "{{ elk_data_dir }}/logstash/logstash.yml:/usr/share/logstash/config/logstash.yml"
-      - "LS_JAVA_OPTS=-Dlog4j2.formatMsgNoLookups=true"
     ports:
-      - {{ elk_listen_ip}}:5044:5044
+{% for _port in elk_logstash_ports %}
+      - {{ elk_listen_ip}}:{{ _port }}:{{ _port }}
+{% endfor %}
     networks:
       - elastic
     command: --config.reload.automatic
@@ -61,9 +66,10 @@ services:
     ports:
       - {{ elk_listen_ip}}:5601:5601
     environment:
-      ELASTICSEARCH_URL: http://elasticsearch:9200
-      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
-      KIBANA_AUTOCOMPLETETERMINATEAFTER: 5000000
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - KIBANA_AUTOCOMPLETETERMINATEAFTER=5000000
+      - TZ=Europe/Vienna
     networks:
       - elastic
     depends_on:
@@ -95,6 +101,8 @@ services:
       - elastic
     depends_on:
       - elasticsearch
+    environment:
+      - TZ=Europe/Vienna
 {% endif %}
 networks:
   elastic:
