--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -4,7 +4,7 @@ version: '3'
 services:
 {% if elk_deploy_elasticsearch %}
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:{{ elk_version }}
+    image: {{ elk_images.elasticsearch }}
     restart: unless-stopped
     container_name: elasticsearch
     environment:
@@ -39,7 +39,7 @@ services:
 {% endif %}
 {% if elk_deploy_logstash %}
   logstash:
-    image: docker.elastic.co/logstash/logstash:{{ elk_version }}
+    image: {{ elk_images.logstash }}
     restart: unless-stopped
     container_name: logstash
     environment:
@@ -66,7 +66,7 @@ services:
 {% endif %}
 {% if elk_deploy_kibana %}
   kibana:
-    image: docker.elastic.co/kibana/kibana:{{ elk_version }}
+    image: {{ elk_images.kibana }}
     restart: unless-stopped
     container_name: kibana
     ports:
@@ -86,7 +86,7 @@ services:
 {% endif %}
 {% if elk_deploy_cerebro %}
   cerebro:
-    image: lmenezes/cerebro
+    image: {{ elk_images.cerebro }}
     restart: unless-stopped
     container_name: cerebro
     ports:
@@ -96,7 +96,7 @@ services:
 {% endif %}
 {% if elk_deploy_elastalert %}
   elastalert:
-    image: jertel/elastalert2:2.4.0
+    image: {{ elk_images.elastalert }}
     restart: unless-stopped
     container_name: elastalert
     ports:
